--- a/program.html
+++ b/program.html
@@ -128,13 +128,13 @@
                     </tr>
 
                     <tr>
-                        <td>12:00 - 2:00PM</td>
+                        <td>12:00 - 1:30PM</td>
                         <td>Lunch</td>
                     </tr>
 
 
                     <tr>
-                        <td>2:00 - 3:00PM</td>
+                        <td>1:30 - 2:30PM</td>
                         <td><button class="collapsible"><i>Keynote</i>: <b style="color:#0db4ba">Beyond the Bytes: Understanding the Limitations of Intrinsic Binary Analysis</b> <br><br>
                         <b style="color:#ff8853">Peter Lafosse</b> (Owner and Co-Founder of Vector 35 Inc.)</button> 
                         <div class="colcontent" style="">
@@ -145,19 +145,19 @@
                             
                                 <br><br>
 
-                                <i>Bio</i>: Peter Lafosse is the owner and co-founder of Vector 35 Inc.
+                                <i>Bio</i>: Peter LaFosse, is an industry veteran. He started his journey 18 years ago working at SI Government Solutions (later acquired by Raytheon) finding and exploiting software vulnerabilities, writing tools to the same effect and running teams as well. He is a recipient of a coveted DEFCON Black Badge for Capture the Flag where he was the offensive team leader. Having served his time as a defense contractor and being dissatisfied with the tools available for software reverse engineering he co-founded Vector 35 with his business partners with the aim of building the next generation of decompiler. Eight years later Binary Ninja stands as one of the most highly regarded products in the industry.
                             </p> 
                         </div>
                         </td>
                     </tr>
 
                     <tr>
-                        <td>3:00 - 3:30PM</td>
+                        <td>2:30 - 3:00PM</td>
                         <td>Break</td>
                     </tr>
 
                     <tr>
-                        <td>3:30 - 5:00PM</td>
+                        <td>3:00 - 4:30PM</td>
                         <td><strong><b style="color:#ff8853">Session 2: Applied Binary Analysis</b></strong> 
                         <!--<p>Session chair: CHAIR (AFFILIATION)</p> </div>-->
                         </td>
@@ -189,7 +189,7 @@
                     </tr>
 
                     <tr>
-                        <td>5:00 - 5:15PM</td>
+                        <td>4:30 - 5:00PM</td>
                         <td><b style="color:#ff8853">Best Paper Award and Closing Remarks</b></td>
                     </tr>
                 </tbody>
