--- a/program.html
+++ b/program.html
@@ -37,6 +37,8 @@
                 </li>
                 <li class="alignable pull-left nav-list"><a href="/program">Program</a> /
                 </li>
+                <li class="alignable pull-left nav-list"><a href="https://bar2023.github.io">BAR'23</a> /
+                </li>
                 <li class="alignable pull-left nav-list"><a href="https://www.ndss-symposium.org/ndss2022/cfp-bar-workshop/">BAR'22</a> /
                 </li>
                 <li class="alignable pull-left nav-list"><a href="https://www.ndss-symposium.org/ndss2021/cfp-bar-workshop/">BAR'21</a> /
