--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             <p align="justify">One author of each accepted paper is expected to present the paper at the workshop. The format will be traditional conference-style research presentations with questions from the audience. Interactive and engaging presentations are welcomed. Following notification to authors, more information will be provided regarding speaking times and other details.</p>
 
-            <p align="justify">The accepted papers will be made available on the workshop website and the workshop will have <em>official proceedings</em>. Publication in the proceedings is not mandatory and authors can choose to have their papers excluded from the official proceedings by selecting “No proceedings” during submission in HotCRP.</p>
+            <p align="justify">The accepted papers will be made available on the workshop website and the workshop will have <em>official proceedings</em>.</p>
 
             <hr />
 
