--- a/program.html
+++ b/program.html
@@ -99,11 +99,17 @@
 
                     <tr>
                         <td>10:30 - 12:00PM</td>
-                        <td><strong><b style="color:#ff8853">Session 1: Applied Binary Analysis</b></strong>
+                        <td><strong><b style="color:#ff8853">Session 1: Disassembly and Firmware Analysis</b></strong>
                         <!--<p> Session chair: CHAIR (AFFILIATION)</p> </div>-->
                         </td>
                     </tr>
 
+                    <tr>
+                        <td> </td>
+                        <td><a href="">Evaluating Disassembly Ground Truth Through Dynamic Tracing</a> <br /> 
+                        <em>Lambang Akbar (National University of Singapore), Yuancheng Jiang (National University of Singapore), Roland Yap (National University of Singapore), Zhenkai Liang (National University of Singapore), Liu Zhuohao (National University of Singapore)</em><br />
+                        <!--<a style="color:#0000ff" href="">Paper</a> <a style="color:#ffff00" href="">Slides</a> <a style="color:#00ffff" href="">Code</a></td>-->
+                    </tr>
                     <tr>
                         <td> </td>
                         <td><a href="">SURGEON: Performant, Flexible and Accurate Re-Hosting via Transplantation</a> <br /> 
@@ -114,12 +120,6 @@
                         <td> </td>
                         <td><a href="">FirmDiff: Improving the Configuration of Linux Kernels Geared Towards Firmware Re-hosting</a> <br /> 
                         <em>Ioannis Angelakopoulos (Boston University), Gianluca Stringhini (Boston University), Manuel Egele (Boston University)</em><br />
-                        <!--<a style="color:#0000ff" href="">Paper</a> <a style="color:#ffff00" href="">Slides</a> <a style="color:#00ffff" href="">Code</a></td>-->
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td><a href="">LibAFL QEMU: A Library for Fuzzing-oriented Emulation</a> <br /> 
-                        <em>Romain Malmain (EURECOM), Andrea Fioraldi (EURECOM), Aurelien Francillon (EURECOM)</em><br />
                         <!--<a style="color:#0000ff" href="">Paper</a> <a style="color:#ffff00" href="">Slides</a> <a style="color:#00ffff" href="">Code</a></td>-->
                     </tr>
                     <tr>
@@ -159,15 +159,15 @@
 
                     <tr>
                         <td>3:00 - 4:30PM</td>
-                        <td><strong><b style="color:#ff8853">Session 2: Assisting Binary Analysis</b></strong> 
+                        <td><strong><b style="color:#ff8853">Session 2: New Frontiers in Binary Analysis</b></strong> 
                         <!--<p>Session chair: CHAIR (AFFILIATION)</p> </div>-->
                         </td>
                     </tr>
 
                     <tr>
                         <td> </td>
-                        <td><a href="">Evaluating Disassembly Ground Truth Through Dynamic Tracing</a> <br /> 
-                        <em>Lambang Akbar (National University of Singapore), Yuancheng Jiang (National University of Singapore), Roland Yap (National University of Singapore), Zhenkai Liang (National University of Singapore), Liu Zhuohao (National University of Singapore)</em><br />
+                        <td><a href="">LibAFL QEMU: A Library for Fuzzing-oriented Emulation</a> <br /> 
+                        <em>Romain Malmain (EURECOM), Andrea Fioraldi (EURECOM), Aurelien Francillon (EURECOM)</em><br />
                         <!--<a style="color:#0000ff" href="">Paper</a> <a style="color:#ffff00" href="">Slides</a> <a style="color:#00ffff" href="">Code</a></td>-->
                     </tr>
                     <tr>
